--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "adventofcode>=23.0b1",
-    "mypy>=1.13.0",
-    "ruff>=0.8.1",
-]
+dependencies = ["adventofcode>=23.0b1", "mypy>=1.13.0", "ruff>=0.8.1"]
+
+[tool.ruff.lint]
+ignore = ["E741"]
