--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "adventofcode>=23.0b1",
     "mypy>=1.13.0",
+    "networkx>=3.4.2",
     "ruff>=0.8.1",
     "z3-solver>=4.13.3.0",
 ]
